firefox overflow issue

--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -100,7 +100,7 @@ body
 .contentBlock
   margin-bottom: 2em
   width: 100%
-  overflow: auto
+  overflow: hidden
 .breadCrumbs
   font-family: 'SilkscreenNormal', sans-serif
   margin-left: 3px
